--- a/Arduino Code/Comms_Code/Comms_Code.vcxproj
+++ b/Arduino Code/Comms_Code/Comms_Code.vcxproj
@@ -43,10 +43,10 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Arduino\hardware\arduino\cores\arduino;C:\Arduino\hardware\arduino\variants\eightanaloginputs;C:\Arduino\libraries\EEPROM;C:\Arduino\libraries\EEPROM\utility;C:\Arduino\libraries\SoftwareSerial;C:\Arduino\libraries\SoftwareSerial\utility;C:\Users\prepress2\Documents\Arduino\libraries\TinyGPS;C:\Users\prepress2\Documents\Arduino\libraries\TinyGPS\utility;c:\arduino\hardware\tools\avr\avr\include\;c:\arduino\hardware\tools\avr\avr\include\avr\;c:\arduino\hardware\tools\avr\avr\;c:\arduino\hardware\tools\avr\lib\gcc\avr\4.3.2\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>C:\Users\prepress2\Documents\GitHub\Scooter\Arduino Code\Comms_Code\Visual Micro\.Comms_Code.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>F:\Program Files\Arduino\hardware\arduino\cores\arduino;F:\Program Files\Arduino\hardware\arduino\variants\eightanaloginputs;F:\Program Files\Arduino\libraries\EEPROM;F:\Program Files\Arduino\libraries\EEPROM\utility;F:\Program Files\Arduino\libraries\SoftwareSerial;F:\Program Files\Arduino\libraries\SoftwareSerial\utility;F:\Users\James\Documents\Arduino\libraries\TinyGPS;F:\Users\James\Documents\Arduino\libraries\TinyGPS\utility;f:\program files\arduino\hardware\tools\avr\avr\include\;f:\program files\arduino\hardware\tools\avr\avr\include\avr\;f:\program files\arduino\hardware\tools\avr\avr\;f:\program files\arduino\hardware\tools\avr\lib\gcc\avr\4.3.2\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>F:\Users\James\Documents\GitHub\Scooter\Arduino Code\Comms_Code\Visual Micro\.Comms_Code.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>__AVR_ATmega328P__;ARDUINO=103;__AVR__;F_CPU=16000000L;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_ATmega328P__;ARDUINO=105;ARDUINO_MAIN;__AVR__;F_CPU=16000000L;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -55,9 +55,14 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Disabled</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <AdditionalIncludeDirectories>F:\Program Files\Arduino\hardware\arduino\cores\arduino;F:\Program Files\Arduino\hardware\arduino\variants\eightanaloginputs;F:\Program Files\Arduino\libraries\EEPROM;F:\Program Files\Arduino\libraries\EEPROM\utility;F:\Program Files\Arduino\libraries\SoftwareSerial;F:\Program Files\Arduino\libraries\SoftwareSerial\utility;F:\Users\James\Documents\Arduino\libraries\TinyGPS;F:\Users\James\Documents\Arduino\libraries\TinyGPS\utility;f:\program files\arduino\hardware\tools\avr\avr\include\;f:\program files\arduino\hardware\tools\avr\avr\include\avr\;f:\program files\arduino\hardware\tools\avr\avr\;f:\program files\arduino\hardware\tools\avr\lib\gcc\avr\4.3.2\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>F:\Users\James\Documents\GitHub\Scooter\Arduino Code\Comms_Code\Visual Micro\.Comms_Code.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
+      <PreprocessorDefinitions>__AVR_ATmega328P__;ARDUINO=105;ARDUINO_MAIN;__AVR__;F_CPU=16000000L;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -78,7 +83,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties arduino.upload.port="COM12" arduino.board.name="nano328" arduino.board.desc="Arduino Nano w/ ATmega328" arduino.board.property_bag="name=Arduino Nano w/ ATmega328&#xD;&#xA;upload.protocol=arduino&#xD;&#xA;upload.maximum_size=30720&#xD;&#xA;upload.speed=57600&#xD;&#xA;bootloader.low_fuses=0xFF&#xD;&#xA;bootloader.high_fuses=0xDA&#xD;&#xA;bootloader.extended_fuses=0x05&#xD;&#xA;bootloader.path=atmega&#xD;&#xA;bootloader.file=ATmegaBOOT_168_atmega328.hex&#xD;&#xA;bootloader.unlock_bits=0x3F&#xD;&#xA;bootloader.lock_bits=0x0F&#xD;&#xA;build.mcu=atmega328p&#xD;&#xA;build.f_cpu=16000000L&#xD;&#xA;build.core=arduino&#xD;&#xA;build.variant=eightanaloginputs&#xD;&#xA;runtime.ide.path=C:\Arduino&#xD;&#xA;build.system.path=C:\Arduino\hardware\arduino\system&#xD;&#xA;software=ARDUINO&#xD;&#xA;runtime.ide.version=103&#xD;&#xA;vm.core.include=arduino.h&#xD;&#xA;vm.boardsource.path=C:\Arduino\hardware\arduino&#xD;&#xA;vm.boardsource.name=boards.txt&#xD;&#xA;vm.platformname.name=&#xD;&#xA;" arduino.build.mcu="atmega328p" arduino.build.f_cpu="16000000L" arduino.build.core="arduino" arduino.upload.protocol="arduino" arduino.upload.speed="57600" arduino.upload.maximum_size="30720" />
+      <UserProperties arduino.upload.port="COM3" arduino.board.name="nano328" arduino.board.desc="Arduino Nano w/ ATmega328" arduino.board.property_bag="name=Arduino Nano w/ ATmega328&#xD;&#xA;upload.protocol=arduino&#xD;&#xA;upload.maximum_size=30720&#xD;&#xA;upload.speed=57600&#xD;&#xA;bootloader.low_fuses=0xFF&#xD;&#xA;bootloader.high_fuses=0xDA&#xD;&#xA;bootloader.extended_fuses=0x05&#xD;&#xA;bootloader.path=atmega&#xD;&#xA;bootloader.file=ATmegaBOOT_168_atmega328.hex&#xD;&#xA;bootloader.unlock_bits=0x3F&#xD;&#xA;bootloader.lock_bits=0x0F&#xD;&#xA;build.mcu=atmega328p&#xD;&#xA;build.f_cpu=16000000L&#xD;&#xA;build.core=arduino&#xD;&#xA;build.variant=eightanaloginputs&#xD;&#xA;runtime.ide.path=C:\Arduino&#xD;&#xA;build.system.path=C:\Arduino\hardware\arduino\system&#xD;&#xA;software=ARDUINO&#xD;&#xA;runtime.ide.version=103&#xD;&#xA;vm.core.include=arduino.h&#xD;&#xA;vm.boardsource.path=C:\Arduino\hardware\arduino&#xD;&#xA;vm.boardsource.name=boards.txt&#xD;&#xA;vm.platformname.name=&#xD;&#xA;" arduino.build.mcu="atmega328p" arduino.build.f_cpu="16000000L" arduino.build.core="arduino" arduino.upload.protocol="arduino" arduino.upload.speed="57600" arduino.upload.maximum_size="30720" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
